--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/three": "^0.156.0",
+    "gh-pages": "^6.1.0",
     "howler": "^2.2.3",
     "lil-gui": "^0.18.2",
     "three": "^0.156.1",
