--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/three": "^0.156.0",
+    "gsap": "^3.12.2",
     "howler": "^2.2.3",
     "lil-gui": "^0.18.2",
     "three": "^0.156.1",
